-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 6u31
-
Component/s: hotspot
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8064795 | 9 | Andreas Eriksson | P4 | Resolved | Fixed | b43 |
| JDK-8083278 | emb-9 | Andreas Eriksson | P4 | Resolved | Fixed | team |
| JDK-8086424 | 8u65 | Andreas Eriksson | P4 | Resolved | Fixed | b01 |
| JDK-8064796 | 8u60 | Andreas Eriksson | P4 | Resolved | Fixed | b06 |
| JDK-8137656 | emb-8u65 | Unassigned | P4 | Resolved | Fixed | b01 |
| JDK-8077440 | emb-8u60 | Andreas Eriksson | P4 | Resolved | Fixed | team |
| JDK-8018357 | 7u45 | Unassigned | P4 | Closed | Fixed | b01 |
| JDK-8015559 | 7u40 | Unassigned | P4 | Closed | Fixed | b27 |
| JDK-8017370 | 6u65 | Unassigned | P4 | Closed | Fixed | b01 |
| JDK-2229036 | 6u60 | Andreas Eriksson | P3 | Closed | Fixed | b01 |
Example:
% grep Full * | more
97615.938: [Full GC 1948395K->1737658K(2259136K), 16.4664960 secs]
98012.870: [Full GC 2340711K->1727536K(2528000K), 14.2683270 secs]
98107.575: [Full GC 2136505K->1748729K(2528000K), 13.6718630 secs]
98924.642: [Full GC 2506695K->1970965K(2528000K), 15.2351710 secs]
99339.771: [Full GC 2392788K->2095746K(2528000K), 15.1428000 secs]
2012-02-15T11:10:37.574+0100: 99360.096: [Full GC 2480403K->2137904K(2528000K), 15.5759880 secs]
2012-02-15T11:10:57.657+0100: 99381.371: [Full GC 2460514K->2155095K(2528000K), 15.8424040 secs]
2012-02-15T11:11:18.523+0100: 99402.416: [Full GC 2494126K->2205046K(2528000K), 16.0608940 secs]
99420.437: [Full GC 2524249K->2225820K(2528000K), 15.9992900 secs]
2012-02-15T11:11:55.189+0100: 99438.003: [Full GC 2481820K->2211826K(2528000K), 16.2163920 secs]
99456.979: [Full GC 2524492K->2240067K(2528000K), 16.1425710 secs]
[ ...]
- backported by
-
JDK-8064795 'Full GC' events miss date stamp information occasionally
-
- Resolved
-
-
JDK-8064796 'Full GC' events miss date stamp information occasionally
-
- Resolved
-
-
JDK-8077440 'Full GC' events miss date stamp information occasionally
-
- Resolved
-
-
JDK-8083278 'Full GC' events miss date stamp information occasionally
-
- Resolved
-
-
JDK-8086424 'Full GC' events miss date stamp information occasionally
-
- Resolved
-
-
JDK-8137656 'Full GC' events miss date stamp information occasionally
-
- Resolved
-
-
JDK-2229036 'Full GC' events miss date stamp information occasionally
-
- Closed
-
-
JDK-8015559 'Full GC' events miss date stamp information occasionally
-
- Closed
-
-
JDK-8017370 'Full GC' events miss date stamp information occasionally
-
- Closed
-
-
JDK-8018357 'Full GC' events miss date stamp information occasionally
-
- Closed
-
- relates to
-
JDK-8014090 Bug 7176220 uses PrintGCDateStamp where it should be PrintGCTimeStamp
-
- Closed
-
-
JDK-6517301 There should be a -XX:+PrintGCDateStamps
-
- Resolved
-