7176220: 'Full GC' events miss date stamp information occasionally

Move date stamp logic into GCTraceTime

Reviewed-by: brutisso, tschatzl